[package]
name = "sloth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
prettytable-rs = "0.8.0"
serde = "1.0.136"
serde_json = "1.0.79"
slothserver = { git = "https://github.com/jxmau/Slothserver" }

